--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
         crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns"
         crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Cedarville+Cursive|Gloria+Hallelujah|Indie+Flower|Merriweather:400,700|Montserrat:400,700|Roboto"
+        rel="stylesheet">
     <link rel="stylesheet" href="./css/index.css">
     <title>smwq</title>
 </head>
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-success">
-        <a class="navbar-brand" href="#">smwq</a>
+        <a class="navbar-brand logo" href="#">smwq</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -55,7 +57,7 @@
                     <img src="./img/img4.jpeg" alt="smwq" class="jumbotron-image">
                 </div>
                 <div class="col-sm-6">
-                    <h1 class="display-4">Syed Mohammad Waqar Quadri</h1>
+                    <h1 class="display-4 jumbotron-title">Syed Mohammad Waqar Quadri</h1>
                     <p class="lead">Full Stack Web Developer</p>
                     <button type="button" class="btn btn-info btn-lg">Know More</button>
                     <hr>
