--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-success">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand logo" href="#">smwq</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -37,10 +37,10 @@
                         Projects
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">Action</a>
-                        <a class="dropdown-item" href="#">Another action</a>
+                        <a class="dropdown-item" href="#">Yelpcamp</a>
+                        <a class="dropdown-item" href="#">Blog Site</a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Something else here</a>
+                        <a class="dropdown-item" href="#">Patatap Clone</a>
                     </div>
                 </li>
                 <li class="nav-item">
@@ -64,6 +64,9 @@
                     <div class="social-links">
                         <a href="https://www.linkedin.com/in/smwaqarquadri/"><i class="fab fa-linkedin icon"></i></a>
                         <a href="https://github.com/smwq"><i class="fab fa-github icon"></i></a>
+                        <a href="https://twitter.com/7smwq10"><i class="fab fa-twitter icon"></i></a>
+                        <a href=""><i class="fab fa-pinterest icon"></i></a>
+                        <a href=""><i class="fab fa-facebook-square icon"></i></a>
                     </div>
                 </div>
             </div>
@@ -95,6 +98,36 @@
                         martial arts to name a
                         few).
                     </p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-6">
+                    <div>
+                        <i class="fas fa-map-marker-alt footer-icon"></i>
+                        <h6 class="footer-content">Noor Nagar <br> New Delhi, India</h6>
+                    </div>
+                    <div>
+                        <i class="fas fa-phone footer-icon"></i>
+                        <h5 class="footer-content">+91 8747829689</h5>
+                    </div>
+                    <div>
+                        <i class="fas fa-envelope footer-icon"></i>
+                        <h5 class="footer-content mail">smwaqarquadri@gmail.com</h5>
+                    </div>
+                </div>
+                <div class="col-6">
+                    <div class="footer-navigation">
+                        <h6>Home</h6>
+                        <h6>About Me</h6>
+                        <h6>Projects</h6>
+                        <h6>Contact</h6>
+                        <hr>
+                    </div>
                 </div>
             </div>
         </div>
